bruh idk media queries??

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,9 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
   font-family: "Josefin Sans", sans-serif;
+  @include desktop{
+    font-size: 65%;
+  }
 }
 body {
   background-color: color(black);
